--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/less/less.js.git"
+    "url": "https://github.com/liupishui/less.js.git"
   },
   "master": {
     "url": "https://github.com/less/less.js/blob/master/",
